# nt

./: CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  dispatch.rs  lib.rs  main.rs
src/app/: dispatch.rs  mod.rs  speed.rs
src/app/networks/: list.rs  mod.rs  remove.rs
src/cli/: args.rs  defaults.rs  mod.rs
src/commands/: mod.rs  speed.rs
src/commands/networks/: list.rs  mod.rs  remove.rs
src/constants/: default_cli_args.rs  mod.rs
src/domain/speed/: mod.rs  unit.rs
src/platform/macos/: mod.rs  speed.rs
src/platform/macos/networks/: remove.rs
src/services/: speed.rs
src/services/networks/: macos.rs
src/services/networks/macos/: list.rs  mod.rs  remove.rs
src/utils/: dry_run.rs  mod.rs  network.rs
