[package]
name = "ntw"
version = "0.1.0"
edition = "2024"
description = "Network tooling for macOS — realtime speed display and simple network interface management."
readme = "README.md"
license = "MIT"
repository = "https://github.com/alexandretrotel/ntw"
homepage = "https://github.com/alexandretrotel/ntw"
documentation = "https://docs.rs/ntw"
authors = ["Alexandre Trotel"]
keywords = ["network", "macos", "cli", "bandwidth", "monitoring"]
categories = ["command-line-utilities"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE-*"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
inquire = "0.9.1"
sysinfo = "0.37.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }

[[bin]]
name = "ntw"
path = "src/main.rs"

[package.metadata]
repository_issues = "https://github.com/alexandretrotel/ntw/issues"
